384. How can you use the preview features?